<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_dashboard_scene">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCustomerInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardProfileImageContainer"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="32dp"
        app:cardElevation="8dp"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/cardImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/profile"/>
    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageSearch"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/selectableItemBackground"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        android:padding="12dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop"
        app:srcCompat="@drawable/ic_baseline_search_24" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textScreenTitle"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:text="@string/dashboard_title_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/textColorBlack"
        app:layout_constraintEnd_toStartOf="@id/imageSearch"
        app:layout_constraintStart_toEndOf="@id/cardProfileImageContainer"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textTotalBalanceLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/total_balance"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/textColorGrey"
        app:layout_constraintBottom_toTopOf="@+id/textTotalBalanceValue"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/cardProfileImageContainer"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textTotalBalanceValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/fake_balance"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorPrimaryVariant"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textBalanceGrowth"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/textTotalBalanceLabel" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textBalanceGrowth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:drawableStart="@drawable/ic_baseline_arrow_drop_up_24"
        android:drawablePadding="4dp"
        android:drawableTint="@color/textColorGreen"
        android:gravity="center"
        android:text="@string/fake_increment"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/textColorGreen"
        app:layout_constraintBottom_toTopOf="@id/guidelineCustomerInfo"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/textTotalBalanceValue" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textStatsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:background="?attr/selectableItemBackground"
        android:checkable="true"
        android:clickable="true"
        android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
        android:drawablePadding="4dp"
        android:drawableTint="@color/textColorBlack"
        android:focusable="true"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/popular_stats"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/textColorBlack"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/guidelineCustomerInfo" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageFilter"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/textStatsLabel"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintTop_toTopOf="@id/textStatsLabel"
        app:srcCompat="@drawable/ic_baseline_filter_list_24"
        app:tint="@color/textColorBlack" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardStat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toTopOf="@id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/textStatsLabel"
        app:layout_constraintWidth_percent="0.6">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.3" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/lineChart"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline30" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageInfo"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="16dp"
                android:alpha="0.5"
                android:gravity="center"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_info_24"
                app:tint="@color/white" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageRefresh"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="16dp"
                android:alpha="0.5"
                android:gravity="center"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintEnd_toStartOf="@id/imageInfo"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_refresh_24"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/textStatsCardValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/guideline30"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Market Price" />

            <TextView
                android:id="@+id/textStatsCardLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center|top"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline30"
                tools:text="2455,44.00" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardScroller"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cardStat"
        app:layout_constraintWidth_percent="0.3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewStats"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        tools:listitem="@layout/item_stats" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Pdf Download"
        android:src="@drawable/ic_baseline_cloud_download_24"
        app:fabSize="auto"
        app:tint="@color/white"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="parent" />
</androidx.constraintlayout.motion.widget.MotionLayout>