...
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_top_rounded"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewDialogTitle"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDialogTitle"
        tools:text="Title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bottomSheetList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toBottomOf="@id/textViewDialogMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
