...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDialogTitle"
        tools:text="Title" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonPositive"
        style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
...
